# Media-processing

./: .gitignore  pyproject.toml
border_detector/: imshow_enum.py  kanny_algo.py  matrix_operators.py
border_detector/cpp/: KanniAlgo.cpp  README.md  kanni
face_detection/: haar_cascades.py  yolov.py
gauss/: convolution_matrix.py  gaussian_blur.py
mnist_neutral_network/: 10-cnn-20-512.weights.h5  2conv-32-filters-20-epoch.weights.h5  3conv-16-32-filters.weights.h5  cnn.py  mlp.py  results.md
motion_detection/: MotionDetector.py
opencv_lab/: open_cv_iran_flag.py  open_cv_lab_task2.py  open_cv_task3.py  open_cv_task4.py  open_cv_task5.py  open_cv_task6.py  open_cv_task7.py  open_cv_task8.py  open_cv_task9.py
text_recognition/: ClassicEasyOCR-trained-v1-test.csv  ClassicEasyOCR-trained-v2-test.csv  ClassicEasyOCR-v1-test.csv  ClassicEasyOCR-v2-test.csv  ClassicPytesseract-test.csv  ClassicPytesseract-v2-test.csv  Results.md  TesseractWithAugmentation-v1-test.csv  TesseractWithPostProcessing-v1-test.csv  TesseractWithPostProcessing-v2-test.csv  playground.py  test_recognition.py
text_recognition/dataset_preparing/: augmentation.py  format_dataset.py  images_crop.py  preprocess_images.py
text_recognition/models/: BaseModel.py  ClassicEasyOCR.py  ClassicPytesseract.py  TesseractWithAugmentation.py  TesseractWithPostProcessing.py
text_recognition/val_types/: BaseValType.py  FullValType.py  LevensteinValType.py
tracking/: convert_to_hsv.py  filtering_red.py  helper.py  moments.py  morph_transform.py  tracking_red_obj.py
utils/: Timer.py
(+10 files in other folders)
