[tool.poetry]
name = "media-processing"
version = "0.1.0"
description = "Digital media processing algorithms"
authors = ["korsNaike <korsnaike@gmail.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
keras = "^3.6.0"
easyocr = "^1.7.2"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.13"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
pandas = "^2.2.3"
nltk = "^3.9.1"
natsort = "^8.4.0"
ultralytics = "^8.3.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
